opam-version: "1.2"
maintainer:   "Danny Willems <contact@danny-willems.be>"
author:       "Danny Willems <contact@danny-willems.be>"
homepage:     "https://github.com/besport/ocaml-jwt"
bug-reports:  "https://github.com/besport/ocaml-jwt/issues"
dev-repo:     "https://github.com/besport/ocaml-jwt.git"
license:      "LGPL-2.1 with OCaml linking exception"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base64" {>= "2.0.0"}
  "yojson"
  "cryptokit"
  "nocrypto"
  "re"
]
